--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,12 +1,9 @@
 <!--index.wxml-->
 <view class="container">
   <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
   </view>
   <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-    <button type="primary" size="{{primarySize}}" loading="{{loading}}" plain="{{plain}}"
-        bindtap="getLocation">获取位置</button>
+    <navigator url="/pages/perindex/perindex" hover-class="navigator-hover">首页</navigator>    
   </view>
 </view>
