--- a/pages/perindex/perindex.wxss
+++ b/pages/perindex/perindex.wxss
@@ -10,5 +10,12 @@ swiper{height:100%}
 image {
   height: 100%;
   width: 100%;
-  opacity: .9;
+}
+.btn {
+  bottom: 200rpx;
+  width: 300rpx;
+  background-color: rgba(19, 206, 102, 0);
+  color: #13CE66;
+  border: 4rpx solid #F7BA2A;
+  font-size: 28rpx;
 }
