--- a/pages/perindex/perindex.wxml
+++ b/pages/perindex/perindex.wxml
@@ -1,8 +1,8 @@
 <!--index.wxml-->
 <view class="container1">
-  <swiper indicator-dots class="swi" indicator-color="rgba(19,206,102,1)" indicator-active-color="#F7BA2A">
+  <swiper indicator-dots indicator-color="rgba(19,206,102,1)" indicator-active-color="#F7BA2A">
     <block wx:for="{{img}}" wx:key="*this">
-      <swiper-item class="swi">
+      <swiper-item >
         <image src="{{item}}"/>
         <button class="btn" bindtap="start" wx:if="{{ index == img.length - 1 }}">Go >>></button>
       </swiper-item>
