--- a/app.wxss
+++ b/app.wxss
@@ -12,3 +12,11 @@ page {
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+text{
+    font-family: MicroSoft Yahei;
+    font-size: 32rpx;
+}
+
+input{
+    font-family: MicroSoft YaHei;
+}
