--- a/pages/perindex/perindex.wxml
+++ b/pages/perindex/perindex.wxml
@@ -9,6 +9,6 @@
     </block>
   </swiper>
 </view>
-<view class="container" wx:else>
-99999
+<view class="container-img" wx:else  style='background-color: #e9ebf4;'>
+  <image src='../../images/icon/loading.gif' style="width: 250rpx; height: 250rpx;" ></image>
 </view>
