--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,7 @@
  <import src="../templates/star/star.wxml"/>
+<view class="header">
+好好学习天天向上好好学习天天向上16
+ </view>
 <!--demo.wxml-->
 <view class="container-movie" wx:for="{{movieList}}" wx:key="index">
   <view class="container-text">
@@ -10,11 +13,15 @@
   <view class='container-scroll'>
     <scroll-view scroll-x style="width: 100%">
         <block wx:for="{{item.subjects}}" wx:key="index" wx:for-item="img">
-          <view class='scroll-view-item_X'>
-            <image src='{{img.imgUrls}}' class="scroll-img"></image>
+          <view class='scroll-view-item_X' wx:if="{{item.url != 'https://api.douban.com/v2/movie/us_box'}}">
+            <image src='{{img.images.large}}' class="scroll-img"></image>
             <text class='text-title text-font'>{{img.title}}</text>
-            {{img.rating.average}}-{{img.rating.stars}}-{{img.rating.stars%10}}
             <template is="starTemplate" data="{{score:img.rating.average,stars:img.rating.stars,rem:img.rating.stars%10}}"></template>          
+          </view>
+          <view class='scroll-view-item_X' wx:else>
+            <image src='{{img.subject.images.large}}' class="scroll-img"></image>
+            <text class='text-title text-font'>{{img.subject.title}}</text>
+            <template is="starTemplate" data="{{score:img.subject.rating.average,stars:img.subject.rating.stars,rem:img.subject.rating.stars%10}}"></template>          
           </view>
         </block>
     </scroll-view>
