--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -52,3 +52,12 @@
 .text-color{
   color: #20A0FF;
 }
+.sc-img{
+  width: 200rpx;
+  height: 200rpx;
+}
+.sc-img-con{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
