--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -2,7 +2,7 @@
 <view class="header">
 {{ana}}
  </view>
- <view>
+ <view wx:if="{{flag}}">
     <view class="container-list">
           <block wx:for="{{subjects}}" wx:key="index">
             <view class='scroll-view-item_X'>
@@ -13,6 +13,18 @@
           </block>
     </view>
  </view>
+ <view wx:if="{{!flag}}">
+    <view class="container-list">
+          <block wx:for="{{item.subjects}}" wx:key="index" wx:for-item="img">
+            <view class='scroll-view-item_X'>
+              <image src='{{img.subject.images.large}}' class="scroll-img"></image>
+              <text class='text-title text-font'>{{img.subject.title}}</text>
+              <template is="starTemplate" data="{{score:img.subject.rating.average,stars:img.subject.rating.stars,rem:img.subject.rating.stars%10}}"></template> 
+            </view>
+          </block>
+    </view>
+ </view>
+
  <view class='ls-bg' wx:if='{{loading}}'>
   <image class='ld' src='/images/icon/ld.svg'></image>
 </view>
